service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-kubernetes
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: test-kubernetes
