service-neg.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-kubernetes
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: test-kubernetes
